--- a/mail/static/mail/styles.css
+++ b/mail/static/mail/styles.css
@@ -1,3 +1,8 @@
+/* general styles*/
+:root {
+    --color2: #c3dded;
+}
+
 textarea {
     min-height: 400px;
 }
@@ -8,15 +13,16 @@ html {
 }
 
 body {
-    background-image: url('./eugenio-mazzone-6ywyo2qtaZ8-unsplash.jpg');
+    /*background-image: url('./joanna-kosinska-uGcDWKN91Fs-unsplash.jpg');
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-size:cover;
+    background-size:cover;*/
     height: 100%;
     width: 100%;
     position: absolute;
     top: 0;
     left: 0;
+    background-color: var(--color2);
 }
 
 .container {
@@ -67,43 +73,111 @@ body {
     padding-bottom: 2%;
 }
 
-
-.login-page-container {
-    display: grid;
-    grid-template-rows: min-content min-content;
-    grid-template-columns: 100%;
-    width: 300px;
-    color: white;
-    border-radius: 7px;
-}
-
-.login-page-container {
-    margin-left: 10vw;
-}
-
-
 .blur {
-    background: #c4ae65;
+    background: var(--color2);
     box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
     backdrop-filter: blur( 4px );
     -webkit-backdrop-filter: blur( 4px );
 }
 
-.login-input {
-    width: 80%;
-    margin-left: 10%;
-    margin-right: 10%;
-}
-
-.register-choice {
-    margin-top: 5%;
-}
-
 .input-field:hover {
-    border: solid 3px grey;    
+    border: solid 3px rgb(109, 200, 253);    
 }
 
 .button:hover {
     transform: scale(1.1);
     -webkit-transform:scale(1.1);
+}
+
+.error-message {
+    color: red;
+}
+
+.column-1 {
+    grid-column: 1;
+}
+
+.column-2 {
+    grid-column: 2;
+}
+
+/* login-register-pages styles*/
+.login-page-container, .register-page-container {
+    display: grid;
+    grid-template-rows: min-content min-content;
+    grid-template-columns: 100%;
+    margin-left: 10vw;
+    width: 300px;
+    color: white;
+    border-radius: 7px;
+}
+
+.login-input, .register-input {
+    width: 80%;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+.register-choice, .login-choice {
+    margin-top: 5%;
+}
+
+/* inbox-page styles */
+
+.inbox-page-container {
+    min-height: min-content;
+    height: inherit;
+    background-color: var(--color2);
+    width: 100vw;
+    display: grid;
+    grid-template-columns: min-content auto;
+    column-gap: 0px;
+    grid-template-rows: 100%;
+}
+
+.my-navbar {
+    width: 100%;
+    line-height: 200%;
+    /*background-color: rgb(186, 221, 248);*/
+    background-color: white;
+    padding-left: 1%;
+    padding-right: 15px;
+}
+
+.inbox-main-page-container {
+    border-left: 0.5px solid grey;
+    padding-left: 3%;
+}
+
+.my-nav-link {
+    max-height: min-content;
+    width: 100% !important;
+    padding-right: 20px;
+}
+
+.my-nav-link:hover {
+    text-decoration: none;
+    color: rgb(206, 54, 54);
+    border-radius: 7px;
+}
+
+#inbox {
+    padding-right: 0px;
+}
+
+#sent {
+    padding-right: 55px;
+}
+
+#archived {
+    padding-right: 25px;
+}
+
+#logout {
+    padding-right: 25px;
+}
+
+.icon {
+    height: 20px;
+    width: 20px;
 }
