--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -2,33 +2,45 @@
 {% load static %}
 
 {% block body %}
-    <h2>{{ request.user.email }}</h2>
-
-    <button class="btn btn-sm btn-outline-primary" id="inbox">Inbox</button>
-    <button class="btn btn-sm btn-outline-primary" id="compose">Compose</button>
-    <button class="btn btn-sm btn-outline-primary" id="sent">Sent</button>
-    <button class="btn btn-sm btn-outline-primary" id="archived">Archived</button>
-    <a class="btn btn-sm btn-outline-primary" href="{% url 'logout' %}">Log Out</a>
-    <hr>
-
-    <div id="emails-view">
-    </div>
-
-    <div id="compose-view">
-        <h3>New Email</h3>
-        <form id="compose-form">
-            <div class="form-group">
-                From: <input disabled class="form-control" value="{{ request.user.email }}">
+    <div class="inbox-page-container">
+        
+        <div class="column-1 my-navbar">
+            <div class="my-nav-link">
+                <img class="icon" src="{% static 'mail/inbox-img.png' %}"/>
+                <a class="my-nav-link" href="#" id="inbox">Inbox</a>
             </div>
-            <div class="form-group">
-                To: <input id="compose-recipients" class="form-control">
+            <a class="my-nav-link" href="#" id="compose">Compose</a>
+            <a class="my-nav-link" href="#" id="sent">Sent</a>
+            <a class="my-nav-link" href="#" id="archived">Archived</a>
+            <a class="my-nav-link" id="logout" href="{% url 'logout' %}">Log Out</a>
+        </div>
+       
+        <div class="inbox-main-page-container column-2">
+            <h2>{{ request.user.email }}</h2>
+
+
+            <hr>
+
+            <div id="emails-view">
             </div>
-            <div class="form-group">
-                <input class="form-control" id="compose-subject" placeholder="Subject">
+
+            <div id="compose-view">
+                <h3>New Email</h3>
+                <form id="compose-form">
+                    <div class="form-group">
+                        From: <input disabled class="form-control" value="{{ request.user.email }}">
+                    </div>
+                    <div class="form-group">
+                        To: <input id="compose-recipients" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <input class="form-control" id="compose-subject" placeholder="Subject">
+                    </div>
+                    <textarea class="form-control" id="compose-body" placeholder="Body"></textarea>
+                    <input type="submit" class="btn btn-primary"/>
+                </form>
             </div>
-            <textarea class="form-control" id="compose-body" placeholder="Body"></textarea>
-            <input type="submit" class="btn btn-primary"/>
-        </form>
+        </div>
     </div>
 {% endblock %}
 
