--- a/mail/templates/mail/register.html
+++ b/mail/templates/mail/register.html
@@ -2,26 +2,34 @@
 
 {% block body %}
 
-    <h2>Register</h2>
+    <div class="register-page-container margin-top blur padding-bottom-small padding-top-small center-content">
+              
+        <div class="welcome-header center-content margin-top-small">
+            <h2>Welcome</h2>
+        </div>       
+        
+        <h4 class="margin-bottom-small">Register</h4>
 
-    {% if message %}
-        <div>{{ message }}</div>
-    {% endif %}
+        {% if message %}
+            <div class="error-message margin-bottom-small">{{ message }}</div>
+        {% endif %}
 
-    <form action="{% url 'register' %}" method="post">
-        {% csrf_token %}
-        <div class="form-group">
-            <input class="form-control" type="email" name="email" placeholder="Email Address">
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="password" name="password" placeholder="Password">
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="password" name="confirmation" placeholder="Confirm Password">
-        </div>
-        <input class="btn btn-primary" type="submit" value="Register">
-    </form>
+        <form action="{% url 'register' %}" method="post">
+            {% csrf_token %}
+            <div class="form-group">
+                <input class="form-control input-field" type="email" name="email" placeholder="Email Address">
+            </div>
+            <div class="form-group">
+                <input class="form-control input-field" type="password" name="password" placeholder="Password">
+            </div>
+            <div class="form-group">
+                <input class="form-control input-field" type="password" name="confirmation" placeholder="Confirm Password">
+            </div>
+            <input class="btn btn-primary button" type="submit" value="Register">
+        </form>
 
-    Already have an account? <a href="{% url 'login' %}">Log In here.</a>
+        Already have an account? <a href="{% url 'login' %}">Log In here.</a>
+
+    </div>
 
 {% endblock %}
