--- a/mail/static/mail/styles.css
+++ b/mail/static/mail/styles.css
@@ -101,6 +101,23 @@ body {
     grid-column: 2;
 }
 
+.row-1 {
+    grid-row: 1;
+}
+
+.row-2 {
+    grid-row: 2;
+}
+
+.color2 {
+    color: var(--color2);
+}
+
+.title {
+    color: blue;
+    margin-left: 2%;
+}
+
 /* login-register-pages styles*/
 .login-page-container, .register-page-container {
     display: grid;
@@ -124,20 +141,35 @@ body {
 
 /* inbox-page styles */
 
+.inbox-all-page-container {
+    display: grid;
+    width: 100vw;
+    grid-template-rows: min-content auto;
+    grid-template-columns: 100%;
+    height: 100%;
+}
+
 .inbox-page-container {
     min-height: min-content;
     height: inherit;
     background-color: var(--color2);
     width: 100vw;
     display: grid;
-    grid-template-columns: min-content auto;
+    grid-template-columns: 110px auto;
     column-gap: 0px;
     grid-template-rows: 100%;
 }
 
+.nav-header {
+    background-color: white;
+    border-bottom: 0.5px solid grey;
+    height: min-content;
+}
+
+
 .my-navbar {
     width: 100%;
-    line-height: 200%;
+    line-height: 230%;
     /*background-color: rgb(186, 221, 248);*/
     background-color: white;
     padding-left: 1%;
@@ -152,32 +184,48 @@ body {
 .my-nav-link {
     max-height: min-content;
     width: 100% !important;
-    padding-right: 20px;
+    margin-left: 2%;
 }
 
 .my-nav-link:hover {
     text-decoration: none;
-    color: rgb(206, 54, 54);
+    background-color: var(--color2);
     border-radius: 7px;
 }
 
 #inbox {
-    padding-right: 0px;
+    padding-right: 15px;
 }
 
 #sent {
-    padding-right: 55px;
+    padding-right: 15px;
 }
 
 #archived {
-    padding-right: 25px;
+    padding-right: 0px;
 }
 
-#logout {
-    padding-right: 25px;
+.log-out-div {
+    position: fixed;
+    top: 2vh;
+    left: 97vw;
+}
+
+#compose {
+    padding-right: 0px !important;
 }
 
 .icon {
     height: 20px;
     width: 20px;
+}
+
+.icon-small {
+    height: 15px;
+    width: 14px;
+}
+
+.icon-big {
+    height: 25px;
+    width: 25px;
 }
