--- a/mail/static/mail/styles.css
+++ b/mail/static/mail/styles.css
@@ -118,25 +118,84 @@ body {
     margin-left: 2%;
 }
 
+.title-front {
+    color: blue;
+}
+
+@media only screen and (max-width: 820px) {
+    .title-front {
+        margin-left: 0%;
+        margin-top: 25vh;
+    }
+    .login-page-container, .register-page-container {
+        margin-left: 0%;
+    }
+    .login-reg-all-page-container {
+        text-align: center;
+        align-items: center;
+    }
+
+}
+
+@media only screen and (min-width: 820px) {
+    .title-front {
+        margin-left: 15%;
+        margin-top: 25vh;
+    }
+    .login-page-container, .register-page-container {
+        margin-left: 10vw;
+        margin-top: 10vh;
+    }
+}
+
+/* flexbox stlyes */
+.flex-item-small {
+    flex-grow: 1;
+    height: min-content;
+    width: 250px !important;
+}
+
+.flex-item {
+    flex-grow: 1;
+    height: min-content;
+    width: 300px !important;
+}
+
+.flex-item-expand {
+    flex-basis: 100%;
+    height: min-content;
+}
+
+.flex-layout {
+    display: flex;
+    flex-flow: row wrap;
+}
+
 /* login-register-pages styles*/
+
+.login-reg-all-page-container {
+    width: 98vw;
+    height: inherit;
+}
+
 .login-page-container, .register-page-container {
     display: grid;
     grid-template-rows: min-content min-content;
     grid-template-columns: 100%;
-    margin-left: 10vw;
     width: 300px;
+    height: 400px;
     color: white;
     border-radius: 7px;
 }
 
-.login-input, .register-input {
-    width: 80%;
-    margin-left: 10%;
-    margin-right: 10%;
-}
-
 .register-choice, .login-choice {
     margin-top: 5%;
+}
+
+.register-form, .login-form {
+    width: 90% !important;
+    margin-left: 5% !important;
+    margin-right: 5% !important;
 }
 
 /* inbox-page styles */
@@ -165,7 +224,6 @@ body {
     border-bottom: 0.5px solid grey;
     height: min-content;
 }
-
 
 .my-navbar {
     width: 100%;
