--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -18,7 +18,7 @@
         <div class="inbox-page-container row-2">
             
             <div class="column-1 my-navbar">
-                <div class="my-nav-link">
+                <div class="my-nav-link margin-top-big">
                     <img class="icon" src="{% static 'mail/inbox-img.png' %}"/>
                     <a class="my-nav-link" href="#" id="inbox">Inbox</a>
                 </div>
