Update login-register styling

--- a/mail/templates/mail/login.html
+++ b/mail/templates/mail/login.html
@@ -5,7 +5,10 @@
 
     <div class="login-reg-all-page-container flex-layout">    
 
-        <h1 class="flex-item title-front">Upmail</h1>
+        <div class="title-front flex-item">
+            <h1>Upmail</h1>
+            <h5>We deliver your thoughts</h5>
+        </div>
         <div class="login-page-container margin-top blur flex-item padding-bottom-small padding-top-small">
 
             <div class="welcome-header center-content margin-top-small">
