--- a/mail/templates/mail/register.html
+++ b/mail/templates/mail/register.html
@@ -4,8 +4,10 @@
 
     <div class="login-reg-all-page-container flex-layout">    
 
-        <h1 class="flex-item title-front">Upmail</h1>
-
+        <div class="title-front flex-item">
+            <h1>Upmail</h1>
+            <h5>We deliver your thoughts</h5>
+        </div>
     
         <div class="register-page-container margin-top blur flex-item padding-bottom-small padding-top-small center-content">
                 
