--- a/mail/static/mail/styles2.css
+++ b/mail/static/mail/styles2.css
@@ -286,10 +286,6 @@ body {
     margin-top:20%;
 }
 
-#compose {
-    padding-right: 0px !important;
-}
-
 .icon {
     height: 20px;
     width: 20px;
@@ -305,15 +301,38 @@ body {
     width: 25px;
 }
 
-#compose-body {
-    height: 200px;
-    min-height: 250px !important;
-    max-height: 250px !important;
+#emails-container {
+    display: grid;
+    width: 90%;
+}
+
+.email-line {
+    color: black;
+    border-bottom: 1px solid grey;
+    border-radius: 5px;
+    display: grid;
+    grid-template-rows: 100%;
+    grid-template-columns: 40% 40% 20%;
+    min-width: 400px;
+    padding-left: 3px;
+}
+
+.email-line:hover {
+    background-color: rgb(168, 186, 189);
 }
 
 /* compose-email styling */
+
+#compose {
+    padding-right: 0px !important;
+}
 
 #compose-view {
     width: 90%;    
 }
 
+#compose-body {
+    height: 200px;
+    min-height: 250px !important;
+    max-height: 250px !important;
+}
