--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -39,13 +39,13 @@
 
             </div>
         
-            <div class="inbox-main-page-container column-2">
+            <div class="inbox-main-page-container column-2" id="main-inbox-container">
 
                 <div id="emails-view">
                     <h3 id="inbox-title" class="relative-title margin-top-small"></h3>
                     <hr>
                     <div id="emails-container">
-                        
+
                     </div>
                 </div>
 
