--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -75,5 +75,5 @@
 {% endblock %}
 
 {% block script %}
-    <script src="{% static 'mail/script.js' %}"></script>
+    <script src="{% static 'mail/inboxScript.js' %}"></script>
 {% endblock %}
