--- a/mail/static/mail/styless.css
+++ b/mail/static/mail/styless.css
@@ -236,7 +236,6 @@ body {
 .inbox-page-container {
     min-height: min-content;
     height: inherit;
-    background-color: var(--color2);
     width: 100vw;
     display: grid;
     grid-template-columns: 110px auto;
@@ -250,7 +249,8 @@ body {
     height: min-content;
     min-width: 300px;
     display: grid;
-    grid-template-columns: 150px auto 50px;
+    grid-template-columns: 150px auto 50px 50px;
+    grid-template-rows: min-content;
     column-gap: 2px;
 }
 
@@ -293,7 +293,7 @@ body {
 }
 
 .log-out-div {
-    margin-top:20%;
+    margin-top:10px;
 }
 
 .icon {
@@ -332,6 +332,7 @@ body {
 
 .email-line-unread {
     font-weight: bold;
+    background-color: rgb(218, 244, 247);
 }
 
 .email-line:hover {
@@ -354,7 +355,6 @@ body {
     animation:
         popup-show 1s;
 }
-
 
 /* compose-email styling */
 
@@ -384,4 +384,61 @@ body {
     height: min-content;
     width: 200px !important;
     margin: 2%;
+}
+
+/* dark mode switch 
+
+switch styling code from:
+https://codepen.io/chriscoyier/pen/JjozJLv */
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 40px;
+    height: 30px;
+    margin-top: 10px;
+}
+.switch-input {
+    display: none;
+}
+.switch-label {
+    display: block;
+    width: 100%;
+    height: 80%;
+    text-indent: -150%;
+    clip: rect(0 0 0 0);
+    color: black;
+    user-select: none;
+}
+.switch-label::before,
+.switch-label::after {
+    content: "";
+    display: block;
+    position: absolute;
+    cursor: pointer;
+}
+.switch-label::before {
+    width: 100%;
+    height: 80%;
+    background-color: #dedede;
+    border-radius: 9999em;
+    -webkit-transition: background-color 0.25s ease;
+    transition: background-color 0.25s ease;
+}
+.switch-label::after {
+    top: 0;
+    left: 0;
+    width: 40%;
+    height: 80%;
+    border-radius: 50%;
+    background-color: #fff;
+    box-shadow: 0 0 2px rgba(0, 0, 0, 0.45);
+    -webkit-transition: left 0.5s ease;
+    transition: left 0.5s ease;
+}
+.switch-input:checked + .switch-label::before {
+    background-color: #89c12d;
+}
+.switch-input:checked + .switch-label::after {
+    left: 60%;
 }
