--- a/mail/static/mail/styles.css
+++ b/mail/static/mail/styles.css
@@ -244,8 +244,8 @@ body {
 }
 
 .nav-header {
-    background-color: white;
-    border-bottom: 0.5px solid grey;
+    /*background-color: white;
+    border-bottom: 0.5px solid grey;*/
     height: min-content;
     min-width: 300px;
     display: grid;
@@ -258,7 +258,7 @@ body {
     width: 100%;
     line-height: 300%;
     /*background-color: rgb(186, 221, 248);*/
-    background-color: white;
+    /*background-color: white;*/
     padding-left: 1%;
     padding-right: 15px;
 }
@@ -320,7 +320,7 @@ body {
 }
 
 .email-line {
-    color: black;
+    /*color: black;*/
     border-bottom: 1px solid grey;
     border-radius: 5px;
     display: grid;
@@ -332,7 +332,7 @@ body {
 
 .email-line-unread {
     font-weight: bold;
-    background-color: rgb(218, 244, 247);
+    /*background-color: rgb(218, 244, 247);*/
 }
 
 .email-line:hover {
