--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -26,19 +26,19 @@
             <div class="column-1 my-navbar">
                 <div class="my-nav-link margin-top-big">
                     <img class="icon" src="{% static 'mail/inbox-img.png' %}"/>
-                    <a class="my-nav-link" href="#" id="inbox">Inbox</a>
+                    <a class="my-nav-sub-link" href="#" id="inbox">Inbox</a>
                 </div>
                 <div class="my-nav-link">
                     <img class="icon-small" src="{% static 'mail/addition-img.png' %}"/>
-                    <a class="my-nav-link" href="#" id="compose">Compose</a>
+                    <a class="my-nav-sub-link" href="#" id="compose">Compose</a>
                 </div>
                 <div class="my-nav-link">
                     <img class="icon-small" src="{% static 'mail/sent-img.png' %}"/>
-                    <a class="my-nav-link" href="#" id="sent">Sent</a>
+                    <a class="my-nav-sub-link" href="#" id="sent">Sent</a>
                 </div>
                 <div class="my-nav-link">
                     <img class="icon-small" src="{% static 'mail/archive-img.png' %}"/>
-                    <a class="my-nav-link" href="#" id="archived">Archived</a>
+                    <a class="my-nav-sub-link" href="#" id="archived">Archived</a>
                 </div>
 
             </div>
