--- a/mail/templates/mail/inbox.html
+++ b/mail/templates/mail/inbox.html
@@ -81,5 +81,5 @@
 {% endblock %}
 
 {% block script %}
-    <script src="{% static 'mail/script.js' %}"></script>
+    <script src="{% static 'mail/JSscripts.js' %}"></script>
 {% endblock %}
